pkgs/artifacts/tests/tui/snapshots/tests__tui__chronological_log_tests__collapsed_run_shows_summary.snap
---
source: tests/tui/chronological_log_tests.rs
expression: render(&model)
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│Artifact: ssh-key (Press 'q' to return, 'e' to expand all, 'c' to collapse all│"
"└──────────────────────────────────────────────────────────────────────────────┘"
"  ▶ Run 1 · 3 lines, 1 error                                                    "
"  ▼ Run 2                                                                       "
"    → ▼ Check (2 lines, 1 success)                                              "
"        [INFO] Starting check                                                   "
"        [OK] Already up to date                                                 "
"      ▼ Generate (0 lines)                                                      "
"      ▼ Serialize (0 lines)                                                     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Space/Enter: Toggle  +/-: Expand/Collapse  j/k: Navigate  PgUp/PgDn: Scroll  Esc"
